# csgostats-discord-bot

./: .gitignore  config.conf  main.py  pyproject.toml  requirements.txt
