[tool.poetry]
name = "csgostats_discord_bot"
version = "0.1.0"
description = ""
authors = ["Matthew Jones <matthewbtjones2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
steam = "^1.0.2"
gevent = "^20.9.0"
cloudscraper = "^1.2.48"
selenium = "^3.141.0"
beautifulsoup4 = "^4.9.3"
csgo = "^1.0.0"
asyncio = "^3.4.3"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
